Enhance index.html with more descriptive content
Added additional content to explain the purpose of the site.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
   <title>Independência Digital | Alves</title>
 </head>
 <body>
-  <h1>Independência Digital</h1>
-  <p>Computador não tem idade. Aprenda no seu tempo, sem complicação.</p>
+<h1>Independência Digital</h1>
+
+<h2>Aprenda a usar a internet para estudar, trabalhar e criar sua própria renda no seu tempo</h2>
+
+<p>
+Aqui você encontra conteúdos simples e diretos sobre independência digital,
+marketing digital do zero, aprendizado online e construção de projetos reais
+sem promessas falsas e sem complicação.
+</p>
+
+<p>
+Este site é para quem está começando do zero e quer aprender com calma,
+passo a passo, usando ferramentas gratuitas e conhecimento prático.
+</p>
+
 </body>
 </html>
