Add meta description to index.html
Added a meta description for better SEO and clarity.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Conteúdos simples sobre independência digital, com ensinamentos práticos para usar a internet no dia a dia, aprender no seu tempo e ganhar autonomia digital.">
   <title>Independência Digital | Alves</title>
+</head>
+
 </head>
 <body>
 <h1>Independência Digital</h1>
@@ -11,8 +14,8 @@
 
 <p>
 Aqui você encontra conteúdos simples e diretos sobre independência digital,
-marketing digital do zero, aprendizado online e construção de projetos reais
-sem promessas falsas e sem complicação.
+com ensinamentos práticos para usar a internet no dia a dia,
+aprender novas habilidades.
 </p>
 
 <p>
