--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <p>
 Aqui você encontra conteúdos simples e diretos sobre independência digital,
-com ensinamentos práticos para usar a internet no dia a dia,
+com ensinamentos práticos para usar a internet no dia a dia e
 aprender novas habilidades.
 </p>
 
