--- a/index.html
+++ b/index.html
@@ -8,20 +8,35 @@
 
 </head>
 <body>
-<h1>Independência Digital</h1>
 
-<h2>Aprenda a usar a internet para estudar, trabalhar e criar sua própria renda no seu tempo</h2>
+  <header>
+    <h1>Independência Digital</h1>
+    <p>Aprenda a usar a internet com autonomia, no seu tempo e sem complicação.</p>
+  </header>
 
-<p>
-Aqui você encontra conteúdos simples e diretos sobre independência digital,
-com ensinamentos práticos para usar a internet no dia a dia e
-aprender novas habilidades.
-</p>
+  <section>
+    <h2>O que você vai aprender aqui</h2>
+    <ul>
+      <li>Usar a internet no dia a dia com segurança</li>
+      <li>Fazer tarefas digitais simples (Pix, apps, vídeos, sites)</li>
+      <li>Aprender novas habilidades no seu ritmo</li>
+      <li>Construir sua autonomia digital passo a passo</li>
+    </ul>
+  </section>
 
-<p>
-Este site é para quem está começando do zero e quer aprender com calma,
-passo a passo, usando ferramentas gratuitas e conhecimento prático.
-</p>
+  <section>
+    <h2>Para quem é este site</h2>
+    <p>
+      Para quem está começando do zero, se sente perdido com tecnologia
+      ou quer aprender com calma, sem termos difíceis.
+    </p>
+  </section>
+
+  <footer>
+    <p>© 2026 — Alves Digital</p>
+  </footer>
+
+</body>
 
 </body>
 </html>
