--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="description" content="Conteúdos simples sobre independência digital, com ensinamentos práticos para usar a internet no dia a dia, aprender no seu tempo e ganhar autonomia digital.">
   <title>Independência Digital | Alves</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 </head>
