Remove and update list items in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <h2>O que você vai aprender aqui</h2>
     <ul>
       <li>Usar a internet no dia a dia com segurança</li>
-      <li>Fazer tarefas digitais simples (Pix, apps, vídeos, sites)</li>
       <li>Aprender novas habilidades no seu ritmo</li>
       <li>Construir sua autonomia digital passo a passo</li>
     </ul>
@@ -29,7 +28,7 @@
   <section>
     <h2>Para quem é este site</h2>
     <p>
-      Para quem está começando do zero, se sente perdido com tecnologia
+      Para quem está começando, se sente perdido com tecnologia
       ou quer aprender com calma, sem termos difíceis.
     </p>
   </section>
