Add navigation links to the header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <header>
     <h1>Independência Digital</h1>
     <p>Aprenda a usar a internet com autonomia, no seu tempo e sem complicação.</p>
+    <nav>
+  <a href="index.html">Início</a> |
+  <a href="sobre.html">Sobre</a>
+</nav>
+
   </header>
 
   <section>
