Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </header>
 
   <section>
-    <h2>Na hora de fazer aquela tarefa diaria no celular ou computador e não sabe como faz?.
-      O que você vai aprender aqui!</h2>
+    <h2>O que você vai aprender aqui!
+
     <ul>
       <li>Usar a internet no dia a dia com segurança</li>
       <li>Aprender novas habilidades no seu ritmo</li>
