--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
   <meta name="description" content="Conteúdos simples sobre independência digital, com ensinamentos práticos para usar a internet no dia a dia, aprender no seu tempo e ganhar autonomia digital.">
   <title>Independência Digital | Alves</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 
-</head>
 <body>
 
   <header>
     <h1>Independência Digital</h1>
     <p>Aprenda a usar a internet com autonomia, no seu tempo e sem complicação.</p>
-    <nav>
-  <a href="index.html">Início</a> |
-  <a href="sobre.html">Sobre</a>
-</nav>
 
+    <nav>
+      <a href="index.html">Início</a> |
+      <a href="sobre.html">Sobre</a>
+    </nav>
   </header>
 
   <section>
-    <h2>O que você vai aprender aqui!
-
+    <h2>O que você vai aprender aqui!</h2>
     <ul>
       <li>Usar a internet no dia a dia com segurança</li>
       <li>Aprender novas habilidades no seu ritmo</li>
@@ -42,8 +39,6 @@
   <footer>
     <p>© 2026 — Alves Digital</p>
   </footer>
-
-</body>
 
 </body>
 </html>
