--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="description" content="Conteúdos simples sobre independência digital, com ensinamentos práticos para usar a internet no dia a dia, aprender no seu tempo e ganhar autonomia digital.">
   <title>Independência Digital | Alves</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
