Add 'Começar a aprender' button to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <header>
     <h1>Independência Digital</h1>
     <p>Aprenda a usar a internet com autonomia, no seu tempo e sem complicação.</p>
+<a href="#conteudos" class="btn-principal">Começar a aprender</a>
 
     <nav>
       <a href="index.html">Início</a> |
