Add basic HTML structure to index.html
Added HTML structure with doctype and head elements.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h1>PARALELEPIPEDO</h1>
-<p>é uma forma de degustação</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+    content="width=device-width,
+    initial-scale=1.0">
+    
+  </head>
+  <body>
+    
+  </body>
+
+</html>
