--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
     content="width=device-width,
     initial-scale=1.0">
-    <title>DOCUMENT</title>
+    <title>Independência Digital</title>
     
   </head>
   <body>
